--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-	
-		<div class="fixed-action-btn toolbar">
+
+		<div id="menu" class="fixed-action-btn toolbar">
 		  <a class="btn-floating btn-large teal lighten-1">
 			<i class="large material-icons">menu</i>
 		  </a>
@@ -31,7 +31,7 @@
 	
 		  </ul>
 		</div>
-			  
+
 <div class="container">
 <main role="main" class="app">
 
@@ -127,7 +127,7 @@
       </div>
 	  <div class="row">
 		<div class="input-field col s12">
-           <input id="Date_Planted" type="text" class="datepicker">
+           <input id="Date_Planted" type="date" class="">
 		<label for="Date_Planted">Date Planted</label>
         </div>
 		<div class="input-field col s12">
