--- a/index.html
+++ b/index.html
@@ -112,7 +112,65 @@
 			  <option value="110">Corn</option>
 			  <option value="111">Cucumber</option>
 			  <option value="112">Dasheen</option>
+			  <option value="113">Eddoe</option>
+			  <option value="114">Eggplant</option>
+			  <option value="115">Ginger</option>
+			  <option value="116">Groundnuts(peanuts)</option>
+			  <option value="117">Corrilla</option>
+			  <option value="118">Lettuce</option>
+			  <option value="119">Melons(exclude water melon)</option>
+			  <option value="120">Onions</option>
+			  <option value="121">Peas(other, not spring bean)</option>
+			  <option value="122">Peas(pigeon)</option>
+			  <option value="123">Peppers(Hot)(Imp)</option>
+			  <option value="124">Peppers(Sweet)(Imp)</option>
 			  <option value="125">Sweet Potato</option>
+			  <option value="126">Pumpkins</option>
+			  <option value="127">Radish</option>
+			  <option value="128">Eschalot (Shallot)</option>
+			  <option value="129">Sorrel</option>
+			  <option value="130">Squash/Zucchini</option>
+			  <option value="131">Sugar Cane</option>
+			  <option value="132">Tannia</option>
+			  <option value="133">Tobacco</option>
+			  <option value="134">Tomatoes</option>
+			  <option value="135">Water Melon</option>
+			  <option value="136">Yams</option>
+			  <option value="137">Cut Flowers</option>
+			  <option value="138">Portugese Yams</option>
+			  <option value="139">White Yam</option>
+			  <option value="140">Dominic Yam/Yellow</option>
+			  <option value="141">Garlic</option>
+			  <option value="142">Mixed Vegetables</option>
+			  <option value="143">Peas Processed</option>
+			  <option value="144">Pop Corn</option>
+			  <option value="145">Soya</option>
+			  <option value="146">Brococoli</option>
+			  <option value="147">Asparagus</option>
+			  <option value="148">Nothing</option>
+			  <option value="149">Orchro</option>
+			  <option value="150">Patchio</option>
+			  <option value="151">Celery/Parsley</option>
+			  <option value="152">Spinach</option>
+			  <option value="153">Chichira</option>
+			  <option value="154">Thyme</option>
+			  <option value="155">Avocado Pears</option>
+			  <option value="156">Bananas</option>
+			  <option value="157">Breadfruit</option>
+			  <option value="158">Breadnut</option>
+			  <option value="159">Cherry</option>
+			  <option value="160">Cocoa</option>
+			  <option value="161">Coconut/Dry Coconut</option>
+			  <option value="162">Coffee</option>
+			  <option value="163">Five Finger Carambola</option>
+			  <option value="164">Golden Apple</option>
+			  <option value="165">Grapefruit</option>
+			  <option value="166">Guava</option>
+			  <option value="167">Lemon</option>
+			  <option value="168">Limes</option>
+
+
+		
 			</select>
 		 </div>
         <div class="input-field col s12">
