added section step to export
Restrict Data Collectors from basic export, exporting will be done at the office.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</a>
 				<a id="prepareLog" class="btn waves-effect waves-light disabled">Process Log<i class="material-icons right">dynamic_feed</i>
 				</a>
-				 <a id="export" class="btn waves-effect waves-light ">Export<i class="material-icons right">save_alt</i>
+				 <a id="export" class="btn waves-effect waves-light disabled ">Export<i class="material-icons right">save_alt</i>
 				</a>
 			 </div>
 			<div class="col s12">
@@ -185,7 +185,7 @@
       </div>
 	  <div class="row">
 		<div class="input-field col s12">
-           <input id="Date_Planted" type="date" class="">
+           <input id="Date_Planted" type="text" class="datepicker">
 		<label for="Date_Planted">Date Planted</label>
         </div>
 		<div class="input-field col s12">
@@ -213,7 +213,7 @@
 			  <br><br>
 			  <h1 class="header center orange-text">Welcome</h1>
 			  <div class="row center">
-				<h5 class="header col s12 light">National Marketing Information System (NAMIS)</br>Farm Data Collection Entry Form</h5>
+				<h5 class="header col s12 light">National Agriculture and Marketing Information System (NAMIS)</br>Farm Data Collection Entry Form</h5>
 						<br><br><br><br>
 				 <p>Simply enter your full name below to begin.</br></p>
 
