Updated Html Fields
Made some fields required and enhanced field titles.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 	  
 		<div class="input-field col s12">
-          <input id="full_name" type="text" class="validate">
+          <input id="full_name" type="text" class="validate" required>
           <label for="full_name">Name</label>
         </div>
 		<div class="input-field col s12">
@@ -175,7 +175,7 @@
 		 </div>
         <div class="input-field col s12">
           <input id="Acreage" type="text" class="validate">
-          <label for="Acreage">Acreage</label>
+          <label for="Acreage">Acreage Planted</label>
         </div>
 		<div class="input-field col s12">
           <input id="Exp_Yield" type="text" class="validate">
@@ -190,7 +190,7 @@
         </div>
 		<div class="input-field col s12">
            <input id="Exp_Harvest_Date" type="text" class="datepicker">
-		<label for="Exp_Harvest_Date">Expected </label>
+		<label for="Exp_Harvest_Date">Expected Harvest Date</label>
 		</div>
 	 </div>
 	 
