input field to range
Input of acreage changed from text field to range field using built in materialize and html5 feature.

expected yield switch from text field type to number field type

--- a/index.html
+++ b/index.html
@@ -177,8 +177,14 @@
           <input id="Acreage" type="text" class="validate">
           <label for="Acreage">Acreage Planted</label>
         </div>
+
+		<div class="range-field col s12">
+			<input id="Acreage1" type="range" min="0" max="100" class="validate">
+			<label for="Acreage1">Acreage Planted</label>
+		  </div>
+
 		<div class="input-field col s12">
-          <input id="Exp_Yield" type="text" class="validate">
+          <input id="Exp_Yield" type="number" class="validate">
           <label for="Exp_Yield">Expected Yield</label>
         </div>
 
