--- a/index.html
+++ b/index.html
@@ -174,14 +174,9 @@
 			</select>
 		 </div>
         <div class="input-field col s12">
-          <input id="Acreage" type="text" class="validate">
+          <input id="Acreage" type="number" class="validate">
           <label for="Acreage">Acreage Planted</label>
         </div>
-
-		<div class="range-field col s12">
-			<input id="Acreage1" type="range" min="0" max="100" class="validate">
-			<label for="Acreage1">Acreage Planted</label>
-		  </div>
 
 		<div class="input-field col s12">
           <input id="Exp_Yield" type="number" class="validate">
