--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 	  
 		<div class="input-field col s12">
-          <input id="full_name" type="text" class="validate" required>
+          <input id="full_name" type="text" class="validate">
           <label for="full_name">Name</label>
         </div>
 		<div class="input-field col s12">
@@ -174,16 +174,15 @@
 			</select>
 		 </div>
         <div class="input-field col s12">
-          <input id="Acreage" type="number" class="validate">
-          <label for="Acreage">Acreage Planted</label>
+          <input id="Acreage" type="text" class="validate">
+          <label for="Acreage">Acreage</label>
         </div>
-
 		<div class="input-field col s12">
-          <input id="Exp_Yield" type="number" class="validate">
+          <input id="Exp_Yield" type="text" class="validate">
           <label for="Exp_Yield">Expected Yield</label>
         </div>
 
-      
+      </div>
 	  <div class="row">
 		<div class="input-field col s12">
            <input id="Date_Planted" type="text" class="datepicker">
@@ -191,7 +190,7 @@
         </div>
 		<div class="input-field col s12">
            <input id="Exp_Harvest_Date" type="text" class="datepicker">
-		<label for="Exp_Harvest_Date">Expected Harvest Date</label>
+		<label for="Exp_Harvest_Date">Expected </label>
 		</div>
 	 </div>
 	 
