--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 			</select>
 		 </div>
         <div class="input-field col s12">
-          <input id="Acreage" type="text" class="validate">
+          <input id="Acreage" type="number" class="validate">
           <label for="Acreage">Acreage</label>
         </div>
 		<div class="input-field col s12">
-          <input id="Exp_Yield" type="text" class="validate">
+          <input id="Exp_Yield" type="number" class="validate">
           <label for="Exp_Yield">Expected Yield</label>
         </div>
 
@@ -190,7 +190,7 @@
         </div>
 		<div class="input-field col s12">
            <input id="Exp_Harvest_Date" type="text" class="datepicker">
-		<label for="Exp_Harvest_Date">Expected </label>
+		<label for="Exp_Harvest_Date">Expected Harvest Date</label>
 		</div>
 	 </div>
 	 
