--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	
 	  <div class="row">
 		<div class="input-field col s12">
-          <input id="farmer_ID" type="text" class="validate">
+          <input id="farmer_ID" data-length="6" type="text" class="validate">
           <label for="farmer_ID">Farmer's ID</label>
         </div>
 	  
