--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	
 	  <div class="row">
 		<div class="input-field col s12">
-          <input id="farmer_ID" data-length="6" type="text" class="validate">
+          <input id="farmer_ID" data-length="6" type="number" class="validate">
           <label for="farmer_ID">Farmer's ID</label>
         </div>
 	  
@@ -229,7 +229,7 @@
 				</div>
 			</div>
 			<div class="col s6 offset-s3">
-				<button id="login" class="btn waves-effect waves-light">Submit
+				<button id="login" class="btn waves-effect waves-purple">Submit
 					<i class="material-icons right">send</i>
 				</button>
 			</div>
