--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			  <br><br>
 			  <h1 class="header center orange-text">Welcome</h1>
 			  <div class="row center">
-				<h5 class="header col s12 light">National Agriculture and Marketing Information System (NAMIS)</br>Farm Data Collection Entry Form</h5>
+				<h5 class="header col s12 light">National Agriculture and Management Information System (NAMIS)</br>Farm Data Collection Entry Form</h5>
 						<br><br><br><br>
 				 <p>Simply enter your full name below to begin.</br></p>
 
@@ -230,7 +230,7 @@
 			</div>
 			<div class="col s6 offset-s3">
 				<button id="login" class="btn waves-effect waves-purple">Submit
-					<i class="material-icons right">send</i>
+					<i class="material-icons right">Send</i>
 				</button>
 			</div>
 		</form>
