updated row for date pickers

--- a/index.html
+++ b/index.html
@@ -175,24 +175,25 @@
 		 </div>
         <div class="input-field col s12">
           <input id="Acreage" type="number" class="validate">
-          <label for="Acreage">Acreage</label>
+          <label for="Acreage">Acreage Planted</label>
         </div>
 		<div class="input-field col s12">
           <input id="Exp_Yield" type="number" class="validate">
           <label for="Exp_Yield">Expected Yield</label>
         </div>
 
+			<div class="row">
+					<div class="input-field col s12">
+					<input id="Date_Planted" type="text" class="datepicker">
+					<label for="Date_Planted">Date Planted</label>
+					</div>
+					<div class="input-field col s12">
+					<input id="Exp_Harvest_Date" type="text" class="datepicker">
+					<label for="Exp_Harvest_Date">Expected Harvest Date</label>
+					</div>
+				</div>
       </div>
-	  <div class="row">
-		<div class="input-field col s12">
-           <input id="Date_Planted" type="text" class="datepicker">
-		<label for="Date_Planted">Date Planted</label>
-        </div>
-		<div class="input-field col s12">
-           <input id="Exp_Harvest_Date" type="text" class="datepicker">
-		<label for="Exp_Harvest_Date">Expected Harvest Date</label>
-		</div>
-	 </div>
+	 
 	 
 	 
     <div class="row">
@@ -230,7 +231,7 @@
 			</div>
 			<div class="col s6 offset-s3">
 				<button id="login" class="btn waves-effect waves-purple">Submit
-					<i class="material-icons right">Send</i>
+					<i class="material-icons right">send</i>
 				</button>
 			</div>
 		</form>
