--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 		  <ul>
 			<li><a href="#data-entry"><i class="material-icons">assignment</i></a></li>
 			<li><a href="#log"><i class="material-icons">view_list</i></a></li>
-	
 		  </ul>
 		</div>
 
@@ -39,6 +38,8 @@
 		<div class="row">
 			<div class="col s12">
 				<a id="showLog" class="btn waves-effect waves-light">Generate Log<i class="material-icons right">list</i>
+				</a>
+				<a id="verifyLog" class="btn waves-effect waves-light disabled">Verify Log<i class="material-icons right">check_box_outline_blank</i>
 				</a>
 				<a id="prepareLog" class="btn waves-effect waves-light disabled">Process Log<i class="material-icons right">dynamic_feed</i>
 				</a>
@@ -63,13 +64,13 @@
 		</div>
 	
 	  <div class="row">
-		<div class="input-field col s12">
+		<div class="input-field chklen col s12">
           <input id="farmer_ID" data-length="6" type="number" class="validate">
           <label for="farmer_ID">Farmer's ID</label>
         </div>
 	  
 		<div class="input-field col s12">
-          <input id="full_name" type="text" class="validate">
+          <input id="full_name" type="text" class="validate" required="" aria-required="true">
           <label for="full_name">Name</label>
         </div>
 		<div class="input-field col s12">
@@ -206,7 +207,48 @@
          
 		</form>
   </div>
-      </div>	  
+      </div>	
+	  
+	
+	  
+
+	<div id="extensionLogin" class="section no-pad-bot">
+		<div class="row center">
+		    <div class="container">
+			  <br><br>
+			  <h1 class="header center orange-text">Extension Officer Registration</h1>
+			  <div class="row center">
+				<h5 class="header col s12 light">National Agriculture and Management Information System (NAMIS)</br>Farm Data Collection Entry Form</h5>
+						<br><br><br><br>
+				 <p>Simply enter your full name below to begin.</br></p>
+
+			  </div>
+			  <br><br>
+			</div>
+		
+		<form>
+			<div class="col s6 offset-s3">
+				<div class="input-field col s12">
+					 <input id="extension" pattern="^[a-zA-Z].*[\s\.]*$" minlength="3" type="text" class="validate">
+					 <label for="extension">Name</label>
+				</div>
+				<div class="input-field col s12">
+					<input id="eoPassowrd" type="password" pattern="^(?:(?=.*[a-z])(?:(?=.*[A-Z])(?=.*[\d\W])|(?=.*\W)(?=.*\d))|(?=.*\W)(?=.*[A-Z])(?=.*\d)).{8,}$"  class="validate">
+					<label for="eoPassword">Password</label>
+			   </div>
+			</div>
+			<div class="col s6 offset-s3">
+				<button id="loginExtension" class="btn waves-effect waves-purple">Submit
+					<i class="material-icons right">send</i>
+				</button>
+			</div>
+		</form>
+		</div>
+	</div>
+
+
+
+
 	  
 	<div id="the-default-view" class="section no-pad-bot">
 		<div class="row center">
@@ -225,7 +267,7 @@
 		<form>
 			<div class="col s6 offset-s3">
 				<div class="input-field col s12">
-					 <input id="datacollector" type="text" class="validate">
+					 <input id="datacollector" name="datacollector" type="text" class="validate">
 					 <label for="datacollector">Name</label>
 				</div>
 			</div>
@@ -235,6 +277,15 @@
 				</button>
 			</div>
 		</form>
+		</div>
+		<div class="row">
+			<div class="container">
+				<br><br><br><br><br><br><br><br><br><br>
+				<div class="col s6 offset-s3">
+					<a href="#extensionLogin"><button id="loginExtension" class="btn waves-effect waves-purple">Extension
+					</button></a>
+				</div>
+			</div>
 		</div>
 	</div>
 	  
