--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 	  <div class="row">
 		<div class="input-field chklen col s12">
-          <input id="farmer_ID" data-length="6" type="number" class="validate">
+          <input id="farmer_ID" data-length="6" length="6" type="number" class="validate">
           <label for="farmer_ID">Farmer's ID</label>
         </div>
 	  
